--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "postpwn",
-  "version": "0.0.0",
-  "description": "postpwn\r =======",
+  "version": "1.0.0",
+  "description": "Postpone initialization of components until they are in the viewport.",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/rasmusfl0e/postpwn.git"
   },
-  "author": "",
+  "author": {
+    "name": "rasmusfl0e",
+    "email": "rasmusfl0e@gmail.com"
+  },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/rasmusfl0e/postpwn/issues"
