--- a/package.json
+++ b/package.json
@@ -15,8 +15,5 @@
   "bugs": {
     "url": "https://github.com/rasmusfl0e/postpwn/issues"
   },
-  "homepage": "https://github.com/rasmusfl0e/postpwn",
-  "dependencies": {
-    "dom-event": "git://github.com/rasmusfl0e/dom-event.git"
-  }
+  "homepage": "https://github.com/rasmusfl0e/postpwn"
 }
