--- a/eslint.config.json
+++ b/eslint.config.json
@@ -1,19 +1,20 @@
 {
 	"env": {
-		"browser": true
+		"browser": true,
+		"commonjs": true
 	},
 	"rules": {
-		"eqeqeq": true,
-		"guard-for-in": true,
-		"no-caller": true,
-		"no-empty": true,
-		"no-undef": true,
-		"curly": true,
+		"eqeqeq": [2, "smart"],
+		"guard-for-in": 2,
+		"no-caller": 2,
+		"no-empty": 2,
+		"no-undef": 2,
+		"curly": 2,
 		"strict": [2, "never"],
-		"no-mixed-spaces-and-tabs": true,
-		"no-underscore-dangle": false,
-		"no-shadow": false,
-		"no-fallthrough": false,
-		"no-use-before-define": false
+		"no-mixed-spaces-and-tabs": 2,
+		"no-underscore-dangle": 0,
+		"no-shadow": 0,
+		"no-fallthrough": 0,
+		"no-use-before-define": 0
 	}
 }
