--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postpwn",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "description": "Postpone initialization of components until they are in the viewport.",
   "main": "index.js",
   "repository": {
@@ -17,9 +17,9 @@
   },
   "homepage": "https://github.com/rasmusfl0e/postpwn",
   "devDependencies": {
-    "eslint": "^0.14.1"
+    "eslint": "^2.3.0"
   },
   "scripts": {
-    "lint": "eslint -c ./eslint.config.json ./index.js"
+    "prepublish": "eslint -c ./eslint.config.json ./index.js"
   }
 }
